# svt-qa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
arduino/ccg_micro_gauge_421/: 421_ccg_micro_logger.py
arduino/htm2500lf/: htm2500lf.ino
cmake/: BuildMacros.cmake
include/daq/: AbstractDataReadEvio.h  Data.h  DataReadEvio.h  Phys2019DataReadEvio.h  Phys2019SvtEvent.h  TestRunDataReadEvio.h  TestRunSvtEvent.h  TestRunSvtSample.h  TrackerSample.h
include/plotting/: RootGraphFactory.h  RootHistogramFactory.h  RootPlotter.h  SamplesPlot.h
include/qa/: BaselineAnalysis.h  BaselineProcessor.h  CalibrationAnalysis.h  ConfigurePython.h  OccupancyAnalysis.h  Process.h  Processor.h  ProcessorFactory.h  QAAnalysis.h  SimpleBaselineAnalysis.h  ThresholdAnalysis.h  ThresholdProcessor.h
include/utils/: Apv25Analysis.h  Apv25Utils.h  ComparePlots.h  PairHash.h  PlotUtils.h  PlottingUtils.h  QAUtils.h  RootFileReader.h  SvtCalibrations.h  TupleBuilder.h  TupleMaker.h  compare_plots.cxx
include/xml/: CalibrationWriter.h  FebNode.h  HybridNode.h  SvtXmlReader.h  SvtXmlWriter.h  ThresholdReader.h  ThresholdWriter.h
notebooks/febs/2021/: 20210716_feb19_bias100V.ipynb  20210716_feb19_bias100V_3.ipynb
processing/: CMakeLists.txt
processing/include/processing/: Exception.h  PluginFactory.h  Process.h  Processor.h
processing/include/processing/config/: ConfigurePython.h  Parameters.h
processing/python/: SvtQACfg.py
processing/src/processing/: Exception.cxx  PluginFactory.cxx  Process.cxx
processing/src/processing/config/: ConfigurePython.cxx
python/configs/: baseline.py
python/db/: config.yml  fill_db.py  load_calibrations.py  load_svt_conditions.py
python/mya/: mya_scraper.py
python/plotting/: make_feb_baseline_plots.sh  make_feb_plots.py  root_plotting_utils.py
python/run/: run_feb_calibration.py
qa/: CMakeLists.txt
qa/src/qa/: svt_qa.cxx
readers/: CMakeLists.txt
readers/include/readers/: RogueDataReader.h
readers/src/readers/: RogueDataReader.cxx
rogue/: CMakeLists.txt
rogue/include/rogue/: RogueCsvWriter.h  RogueDataReceiver.h  RogueFileParser.h  RogueUtils.h
rogue/src/rogue/: RogueCsvWriter.cxx  RogueDataReceiver.cxx  RogueFileParser.cxx
rogue/test/: RogueCsvWriterTest.cxx  RogueDataReceiverTest.cxx
scripts/: setup_omars_qa.csh  setup_qa.csh
src/analysis/: CMakeLists.txt  apv25_qa.cpp  source_analysis.cxx
src/daq/: AbstractDataReadEvio.cxx  CMakeLists.txt  Data.cxx  DataReadEvio.cxx  Phys2019DataReadEvio.cxx  Phys2019SvtEvent.cxx  TestRunDataReadEvio.cxx  TestRunSvtEvent.cxx  TestRunSvtSample.cxx  TrackerSample.cxx
src/plotting/: CMakeLists.txt  RootGraphFactory.cxx  RootHistogramFactory.cxx  RootPlotter.cxx  SamplesPlot.cxx
src/qa/: BaselineAnalysis.cxx  BaselineProcessor.cxx  CMakeLists.txt  CalibrationAnalysis.cxx  ConfigurePython.cxx  OccupancyAnalysis.cxx  Process.cxx  ProcessorFactory.cxx  SimpleBaselineAnalysis.cxx  ThresholdAnalysis.cxx  ThresholdProcessor.cxx  apv25_gain.cxx  apv25_qa.cxx  baseline.cxx  baseline_feb.cxx  source_analysis.cxx  svt_qa.cxx
src/utils/: Apv25Utils.cxx  CMakeLists.txt  ComparePlots.cxx  PairHash.cxx  PlotUtils.cpp  PlottingUtils.cxx  QAUtils.cxx  RootFileReader.cxx  SvtCalibrations.cpp  SvtCalibrations.cxx  TupleMaker.cxx  compare_plots.cxx
src/xml/: CMakeLists.txt  CalibrationWriter.cxx  FebNode.cxx  HybridNode.cxx  SvtXmlReader.cxx  SvtXmlWriter.cxx  ThresholdReader.cxx  ThresholdWriter.cxx
test/: CMakeLists.txt  CalibrationWriterTest.cxx  DataReadEvioTest.cxx  TestRunDataReadEvioTest.cxx
